--- a/DokodemoLLM.csproj
+++ b/DokodemoLLM.csproj
@@ -8,4 +8,10 @@
     <ApplicationIcon>res\dokodemollm.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenAI" Version="2.5.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.57" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
