--- a/DokodemoLLM.csproj
+++ b/DokodemoLLM.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="OpenAI" Version="2.5.0" />
   </ItemGroup>
 
