--- a/DokodemoLLM.csproj
+++ b/DokodemoLLM.csproj
@@ -6,11 +6,39 @@
     <UseWindowsForms>true</UseWindowsForms>
     <LangVersion>10.0</LangVersion>
     <ApplicationIcon>res\dokodemollm.ico</ApplicationIcon>
+    
+    <!-- 単一ファイル実行可能ファイルの設定 -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    
+    <!-- 不要なコードの削除（トリミング） -->
+    <PublishTrimmed>false</PublishTrimmed>
+    
+    <!-- 出力先の設定 -->
+    <PublishDir>publish</PublishDir>
+    
+    <!-- デバッグシンボルの埋め込み -->
+    <DebugType>embedded</DebugType>
+    
+    <!-- ReadyToRunとアセンブリトリミング -->
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishTrimmed>false</PublishTrimmed>
+    <EnableTrimAnalyzer>false</EnableTrimAnalyzer>
+    
+    <!-- 不要なファイルの除外 -->
+    <IncludeNativeLibrariesForSelfExtract>false</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="OpenAI" Version="2.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
