コンパイルオプションを調整

--- a/DokodemoLLM.csproj
+++ b/DokodemoLLM.csproj
@@ -3,14 +3,36 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
+    <SupportedOSPlatformVersion>6.1</SupportedOSPlatformVersion>
+    <SupportedOSPlatform>windows</SupportedOSPlatform>
+    
+    <!-- 単一ファイル実行可能ファイルの設定 -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>false</SelfContained>
+    
+    <!-- 出力先の設定 -->
+    <PublishDir>publish</PublishDir>
+    
+    <!-- デバッグシンボルの埋め込み -->
+    <DebugType>embedded</DebugType>
+    
     <UseWindowsForms>true</UseWindowsForms>
-    <LangVersion>10.0</LangVersion>
     <ApplicationIcon>res\dokodemollm.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="OpenAI" Version="2.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
