--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: '8.0.x'
         
     - name: Restore dependencies
       run: dotnet restore ${{ env.Solution_Name }}
@@ -32,7 +32,7 @@ jobs:
       run: dotnet build ${{ env.Project_Name }} --configuration ${{ matrix.configuration }} --no-restore
     
     - name: Publish
-      run: dotnet publish ${{ env.Project_Name }} --configuration ${{ matrix.configuration }} --no-build --output ./publish
+      run: dotnet publish ${{ env.Project_Name }} --configuration ${{ matrix.configuration }} --no-build --self-contained true --runtime win-x64 --output ./publish
     
     - name: Zip output
       run: powershell Compress-Archive -DestinationPath ${{ matrix.configuration }}.zip -Path .\publish\*.*
